# MoonVeil

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Doxyfile  README.md
diagrams/: class.mdj
html/: abilities_8h_source.html  annotated.html  bloodClaws_8h_source.html  button_8h_source.html  cameraController_8h_source.html  classAbility-members.html  classAbility.html  classAbility__coll__graph.map  classAbility__coll__graph.md5  classAbility__inherit__graph.map  classAbility__inherit__graph.md5  classBloodClaws-members.html  classBloodClaws.html  classBloodClaws__coll__graph.map  classBloodClaws__coll__graph.md5  classBloodClaws__inherit__graph.map  classBloodClaws__inherit__graph.md5  classButton-members.html  classButton.html  classButton__coll__graph.map  classButton__coll__graph.md5  classCameraController-members.html  classCameraController.html  classCameraController__coll__graph.map  classCameraController__coll__graph.md5  classCollisionSystem-members.html  classCollisionSystem.html  classCollisionSystem__coll__graph.map  classCollisionSystem__coll__graph.md5  classCongratulationsScene-members.html  classCongratulationsScene.html  classCongratulationsScene__coll__graph.map  classCongratulationsScene__coll__graph.md5  classCongratulationsScene__inherit__graph.map  classCongratulationsScene__inherit__graph.md5  classDavid-members.html  classDavid.html  classDavid__coll__graph.map  classDavid__coll__graph.md5  classDavid__inherit__graph.map  (+326 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  searchdata.js
resources/: Water.tsx  dangeon.tmx  dangeon.tsx  sawerage.tmx  sdffsdf.tsx  testWorld.tmx  testWorld1.tmx
resources/maps/: first.txt
src/: CMakeLists.txt  main.cpp  main.h
src/abilities/: abilities.cpp  abilities.h
src/abilities/defaultAttack/: defaultAttack.cpp  defaultAttack.h
src/abilities/fireBall/: fireBall.cpp  fireBall.h
src/abilities/fireBallMonster/: fireBallMonster.cpp  fireBallMonster.h
src/abilities/fireStorm/: fireStorm.cpp  fireStorm.h
src/abilities/poisonousGas/: poisonousGas.cpp  poisonousGas.h
src/button/: button.cpp  button.h
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
src/cameraController/: cameraController.cpp  cameraController.h
src/characters/bloodClaws/: bloodClaws.cpp  bloodClaws.h
src/characters/david/: david.cpp  david.h
src/characters/eyeGore/: eyeGore.cpp  eyeGore.h
src/characters/floralWretch/: floralWretch.cpp  floralWretch.h
src/characters/galmar/: galmar.cpp  galmar.h
src/characters/maidenMaw/: maidenMaw.cpp  maidenMaw.h
src/characters/slug/: slug.cpp  slug.h
src/characters/steelBound/: steelBound.cpp  steelBound.h
src/collisionSystem/: collisionSystem.cpp  collisionSystem.h
src/enemy/: enemy.cpp  enemy.h
src/entity/: entity.cpp  entity.h
src/game/: game.cpp  game.h
src/gameObject/: gameObject.cpp  gameObject.h
src/gameTimer/: gameTimer.cpp  gameTimer.h
src/imGuiManager/: imGuiManager.cpp  imGuiManager.h
src/imGuiManager/loggerWindow/: loggerWindow.cpp  loggerWindow.h
src/interface/HUD/: hud.cpp  hud.h
src/loggerManager/: loggerManager.cpp  loggerManager.h
src/player/: player.cpp  player.h
src/resourceManager/: resourceManager.cpp  resourceManager.h
src/scene/: gameScene.cpp  gameScene.h  menuScene.cpp  menuScene.h  scene.h
src/scene/congratulationsScene/: congratulationsScene.cpp  congratulationsScene.h
src/scene/deathScene/: deathScene.cpp  deathScene.h
src/scene/gameScene/: gameScene.cpp  gameScene.h
src/scene/heroSelectionScene/: heroSelectionScene.cpp  heroSelectionScene.h
src/scene/mapSelectionScene/: mapSelectionScene.cpp  mapSelectionScene.h
src/scene/menuScene/: menuScene.cpp  menuScene.h
src/scene/pauseScene/: pauseScene.h
src/scene/settingsScene/: settingsScene.cpp  settingsScene.h
src/settings/: settings.cpp  settings.h
src/spawner/: spawner.cpp  spawner.h
src/tileMap/: tileMap.cpp  tileMap.h
test/: CMakeLists.txt  calculator_test.cpp  template_test.cpp
